--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ requests>=2.31.0
 
 # ---------- Retrieval / RAG ----------
 faiss-cpu>=1.8.0
+sentence-transformers>=2.2.2  # For FAISS embedding (Korean: jhgan/ko-sroberta-multitask)
 numpy>=1.26.4
 scikit-learn>=1.5.0
 rank-bm25>=0.2.2
